--- a/webapp/src/styles/_vars.scss
+++ b/webapp/src/styles/_vars.scss
@@ -1,13 +1,12 @@
-$header-height: 80px;
-$strokes-secondary-color: #e6e6e6;
-$background-primary-color: #fff;
-$background-secondary-color: #f3f3f3;
-$strokes-primary-color: #d5d5d5;
-$strokes-primary-hover-color: #838383;
-$border-radius: 5px;
-$txt-color: #000;
-$gray: #838383;
-$hover-color: #00c;
-$green: #26ab26;
-$red: #be2121;
-$jost: var(--jost);
+$jost: 'Jost', sans-serif;
+$hPaddingDesktop: 32px;
+$hPaddingMobile: 20px;
+$biege: #f8f6ee;
+$brandGreen: #567f6b;
+$brandBlack: #393a3d;
+$pureWhite: #fff;
+$brandBlack60: rgba(57 58 61 / 60%);
+$brandBlack75: rgba(57 58 61 / 75%);
+$hoverColor: $brandGreen;
+$panelMaxWidth: 800px;
+$descMaxWidth: 600px;
