--- a/webapp/src/styles/globals.scss
+++ b/webapp/src/styles/globals.scss
@@ -1,4 +1,6 @@
 @import '../../node_modules/reset-css/sass/reset';
+@import '../../node_modules/slick-carousel/slick/slick.css';
+@import '../../node_modules/slick-carousel/slick/slick-theme.css';
 @import './mixins';
 @import './vars';
 
