--- a/webapp/src/components/Layout/index.module.scss
+++ b/webapp/src/components/Layout/index.module.scss
@@ -5,23 +5,30 @@ $headerHeightDesktop: 80px;
 $headerHeightMobile: 56px;
 
 .layout {
-  .header {
-    height: $headerHeightDesktop;
-    position: relative;
+  .mobileMenu {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: $brandGreen;
+    z-index: 9990;
 
-    .headerFloating {
-      height: $headerHeightDesktop;
-      position: fixed;
-      z-index: 999;
-      top: 0;
-      left: 0;
-      width: 100%;
-      background-color: $biege;
-      padding: 0 $hPaddingDesktop;
+    &.isOpen {
+      display: flex;
+      flex-flow: column nowrap;
+    }
+
+    .mobileMenuHeader {
+      flex: 0 0 $headerHeightMobile;
+      height: $headerHeightMobile;
       display: flex;
       flex-flow: row nowrap;
       justify-content: space-between;
+      // justify-content: flex-end;
       align-items: center;
+      @include sectionHPadding;
 
       .logoPlace {
         .logoLink {
@@ -32,10 +39,217 @@ $headerHeightMobile: 56px;
         }
       }
 
+      .mobileMenuButton {
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 17px;
+        letter-spacing: 0.06em;
+        text-transform: uppercase;
+        background: none;
+        border: none;
+        cursor: pointer;
+        color: $pureWhite;
+        @include hoverTransition(color);
+
+        .menuButtonIcon {
+          margin-right: 7px;
+
+          path {
+            @include hoverTransition(fill-opacity fill);
+          }
+        }
+
+        &:hover {
+          transition: none;
+          color: $hoverLightColor;
+
+          .menuButtonIcon path {
+            fill: $hoverLightColor;
+            fill-opacity: 1;
+            transition: none;
+          }
+        }
+      }
+    }
+
+    .mobileMenuContent {
+      flex: 1 1 100%;
+      display: flex;
+      flex-flow: column;
+      justify-content: center;
+      align-items: center;
+
+      .menu {
+        display: flex;
+        flex-flow: column nowrap;
+        align-items: center;
+
+        .menuItem {
+          &:not(:last-child) {
+            margin-bottom: 32px;
+          }
+
+          .menuLink {
+            @include tmenu;
+            @include hoverTransition(color);
+            color: $pureWhite;
+            display: flex;
+            flex-flow: row nowrap;
+
+            path {
+              @include hoverTransition(fill-opacity fill);
+            }
+
+            &:hover {
+              color: $hoverLightColor;
+              transition: none;
+
+              path {
+                fill: $hoverLightColor;
+                fill-opacity: 1;
+                transition: none;
+              }
+            }
+          }
+
+          .socialMenu {
+            display: flex;
+            flex-flow: row nowrap;
+            align-items: center;
+
+            .socialMenuItem {
+              &:not(:last-child) {
+                margin-right: 32px;
+              }
+
+              .socialMenuLink {
+                @include tmenu;
+                @include hoverTransition(color);
+                color: $pureWhite;
+                display: flex;
+                flex-flow: row nowrap;
+
+                path {
+                  fill: $pureWhite;
+                  fill-opacity: 1;
+                  @include hoverTransition(fill-opacity fill);
+                }
+
+                &:hover {
+                  color: $hoverLightColor;
+                  transition: none;
+
+                  path {
+                    fill: $hoverLightColor;
+                    fill-opacity: 1;
+                    transition: none;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .header {
+    height: $headerHeightDesktop;
+    position: relative;
+
+    @include breakpoint1 {
+      height: $headerHeightMobile;
+    }
+
+    .headerFloating {
+      height: $headerHeightDesktop;
+      position: fixed;
+      z-index: 999;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background-color: $biege;
+      display: flex;
+      flex-flow: row nowrap;
+      justify-content: space-between;
+      align-items: center;
+      @include sectionHPadding;
+
+      @include breakpoint1 {
+        height: $headerHeightMobile;
+      }
+
+      .logoPlace {
+        .logoLink {
+          text-decoration: none;
+
+          .logo {
+            @include breakpoint1 {
+              display: none;
+            }
+          }
+
+          .logoMobile {
+            display: none;
+
+            @include breakpoint1 {
+              display: block;
+            }
+          }
+        }
+      }
+
+      .menuButton {
+        display: none;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 17px;
+        letter-spacing: 0.06em;
+        text-transform: uppercase;
+        background: none;
+        border: none;
+        cursor: pointer;
+        @include hoverTransition(color);
+
+        @include breakpoint1 {
+          display: flex;
+          flex-flow: row nowrap;
+          align-items: center;
+        }
+
+        .menuButtonIcon {
+          margin-right: 7px;
+
+          path {
+            @include hoverTransition(fill-opacity fill);
+          }
+        }
+
+        &:hover {
+          transition: none;
+          color: $hoverColor;
+
+          .menuButtonIcon path {
+            fill: $hoverColor;
+            fill-opacity: 1;
+            transition: none;
+          }
+        }
+      }
+
       .menu {
         display: flex;
         flex-flow: row nowrap;
         align-items: center;
+
+        @include breakpoint1 {
+          display: none;
+        }
 
         .menuItem {
           &:not(:last-child) {
@@ -73,28 +287,15 @@ $headerHeightMobile: 56px;
   }
 
   .contacts {
-    padding-top: 60px;
-    margin-top: 60px;
+    @include sectionTPadding;
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
     @include sectionHPadding;
 
-    .title {
-      @include t1;
-      text-align: center;
-    }
-
-    .desc {
-      @include tm;
-      color: $brandBlack60;
-      margin-top: 16px;
-      max-width: $descMaxWidth;
-      text-align: center;
-    }
+    @include sectionHeader;
 
     .panel {
-      margin-top: 32px;
       padding: 80px 0;
       background: $pureWhite;
       max-width: $panelMaxWidth;
@@ -102,6 +303,10 @@ $headerHeightMobile: 56px;
       display: flex;
       flex-flow: column nowrap;
       align-items: center;
+
+      @include breakpoint1 {
+        padding: 64px 0;
+      }
 
       .menu {
         .menuItem {
@@ -155,15 +360,28 @@ $headerHeightMobile: 56px;
     align-items: center;
     justify-content: center;
 
+    @include breakpoint1 {
+      margin-top: 120px;
+    }
+
     .menu {
       display: flex;
       flex-flow: row nowrap;
       align-items: center;
       justify-content: center;
 
+      @include breakpoint1 {
+        flex-flow: column nowrap;
+      }
+
       .menuItem {
         &:not(:last-child) {
           margin-right: 32px;
+
+          @include breakpoint1 {
+            margin-right: 0;
+            margin-bottom: 24px;
+          }
         }
 
         .menuLink {
