--- a/webapp/src/pages/[workAlias]/index.module.scss
+++ b/webapp/src/pages/[workAlias]/index.module.scss
@@ -42,6 +42,10 @@
     .title {
       @include t1;
       margin-top: 0;
+
+      @include breakpoint1 {
+        @include t2;
+      }
     }
 
     .attrs {
@@ -52,13 +56,26 @@
         display: flex;
         flex-flow: row nowrap;
 
+        @include breakpoint1 {
+          flex-flow: column nowrap;
+        }
+
         &:not(:last-child) {
           margin-bottom: 4px;
+
+          @include breakpoint1 {
+            margin-bottom: 12px;
+          }
         }
 
         .key {
           color: $brandBlack75;
           margin-right: 8px;
+
+          @include breakpoint1 {
+            margin-right: 0;
+            margin-bottom: 1px;
+          }
         }
 
         .value {
@@ -73,6 +90,11 @@
   padding-left: $hPaddingDesktop;
   padding-right: $hPaddingDesktop;
 
+  @include breakpoint1 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
   .contentPanel {
     display: flex;
     flex-flow: column;
@@ -82,6 +104,18 @@
     padding-top: 90px;
     padding-bottom: 73px;
     background-color: $pureWhite;
+
+    @include media('<=1190px') {
+      padding-top: 50px;
+      padding-bottom: 50px;
+    }
+
+    @include breakpoint1 {
+      padding-left: $hPaddingMobile;
+      padding-right: $hPaddingMobile;
+      padding-top: $hPaddingMobile;
+      padding-bottom: $hPaddingMobile;
+    }
 
     .preview {
       max-width: 1008px;
@@ -102,6 +136,33 @@
       width: 100%;
       max-width: $panelMaxWidth;
       margin-top: 48px;
+    }
+  }
+}
+
+.bottomBackWrapper {
+  margin-top: 80px;
+  @include sectionHPadding;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: center;
+
+  .back {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    color: $brandBlack;
+    @include hoverTransition(color);
+    @include tmenu;
+
+    &:hover {
+      color: $brandGreen;
+      transition: none;
+    }
+
+    .icon {
+      margin-right: 16px;
     }
   }
 }
