--- a/webapp/src/pages/index.module.scss
+++ b/webapp/src/pages/index.module.scss
@@ -1,18 +1,26 @@
 @import '../styles/vars';
 @import '../styles/mixins';
 
-.gallery {
-  width: 100%;
-  height: 611px;
-  background: $brandGreen;
+.galleryWrapper {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: center;
 
-  * {
-    display: none;
+  .gallery {
+    width: 100%;
+    max-width: 1680px;
+    height: 611px;
+    background: $brandGreen;
+
+    @include breakpoint1 {
+      height: 320px;
+    }
   }
 }
 
 .promo {
-  margin-top: 120px;
+  @include sectionTPadding;
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
@@ -28,6 +36,11 @@
     flex-flow: row nowrap;
     align-items: center;
 
+    @include breakpoint1 {
+      flex-flow: column;
+      padding: 40px 24px;
+    }
+
     * {
       z-index: 2;
     }
@@ -37,6 +50,23 @@
       top: -32px;
       left: 0;
       z-index: 1;
+
+      @include breakpoint1 {
+        display: none;
+      }
+    }
+
+    .branchSmall {
+      position: absolute;
+      left: 50%;
+      margin-top: -98px;
+      top: 50%;
+      margin-left: -180px;
+      display: none;
+
+      @include breakpoint1 {
+        display: block;
+      }
     }
 
     .avatar {
@@ -44,6 +74,11 @@
       margin-right: 40px;
       width: 144px;
       height: 144px;
+
+      @include breakpoint1 {
+        margin-right: 0;
+        margin-bottom: 32px;
+      }
     }
 
     .text {
@@ -56,21 +91,29 @@
 
       .title {
         @include t2;
+
+        @include breakpoint1 {
+          @include t3;
+        }
       }
 
       .desc {
         margin-top: 8px;
-        @include tl;
+        @include txl;
         color: $brandBlack75;
-        max-width: 400px;
+        max-width: 460px;
+
+        @include breakpoint1 {
+          @include tl;
+          max-width: none;
+        }
       }
     }
   }
 }
 
 .services {
-  margin-top: 60px;
-  padding-top: 60px;
+  @include sectionTPadding;
   @include sectionHPadding;
   display: flex;
   flex-flow: column;
@@ -81,33 +124,9 @@
     display: flex;
     flex-flow: column;
     align-items: center;
-
-    .title {
-      @include t1;
-      text-align: center;
-    }
-
-    .desc {
-      @include tm;
-      color: $brandBlack75;
-      margin-top: 16px;
-      max-width: $descMaxWidth;
-      text-align: center;
-
-      a {
-        color: $brandGreen;
-        @include hoverTransition(color);
-        text-decoration: underline;
-
-        &:hover {
-          color: $brandBlack;
-          transition: none;
-        }
-      }
-    }
+    @include sectionHeader;
 
     .items {
-      margin-top: 32px;
     }
   }
 }
@@ -123,6 +142,10 @@
     cursor: pointer;
     box-shadow: 0 4px 24px rgba(0, 0, 0, 0);
     transition: box-shadow 400ms ease;
+
+    @include breakpoint1 {
+      padding: 20px;
+    }
 
     &:not(:last-child) {
       margin-bottom: 16px;
@@ -148,9 +171,20 @@
       align-items: center;
       position: relative;
 
+      @include breakpoint1 {
+        flex-flow: column;
+        align-items: stretch;
+        justify-content: stretch;
+      }
+
       .itemIcon {
         flex: 0 0 56px;
         margin-right: 24px;
+
+        @include breakpoint1 {
+          margin-right: 0;
+          margin-bottom: 12px;
+        }
       }
 
       .itemText {
@@ -160,6 +194,10 @@
           @include txl;
           position: relative;
           padding-right: 30px;
+
+          @include breakpoint1 {
+            @include tl;
+          }
 
           .itemArrow {
             position: absolute;
@@ -173,6 +211,10 @@
           margin-top: 4px;
           @include tm;
           color: $brandBlack60;
+
+          @include breakpoint1 {
+            margin-top: 2px;
+          }
         }
       }
     }
@@ -188,43 +230,45 @@
 
       &.padded {
         padding-left: 80px;
+
+        @include breakpoint1 {
+          padding-left: 0;
+        }
       }
     }
   }
 }
 
 .works {
-  padding-top: 60px;
-  margin-top: 60px;
+  @include sectionTPadding;
   display: flex;
   flex-flow: column;
   align-items: center;
   @include sectionHPadding;
 
-  .title {
-    @include t1;
-    text-align: center;
-  }
-
-  .desc {
-    @include tm;
-    color: $brandBlack75;
-    margin-top: 16px;
-    max-width: $descMaxWidth;
-    text-align: center;
-  }
+  @include sectionHeader;
 
   .items {
-    margin: 32px -16px -32px;
+    margin: 0 -16px -32px;
     display: flex;
     flex-flow: row wrap;
     width: 100%;
     max-width: 1216px;
 
+    @include breakpoint1 {
+      margin: 0 0 -16px;
+      flex-flow: column nowrap;
+    }
+
     .item {
       flex: 0 0 33.3333%;
       padding: 0 16px 32px;
       position: relative;
+
+      @include breakpoint1 {
+        padding: 0 0 16px;
+        flex: 0 0 auto;
+      }
 
       &:hover {
         .itemInner .content .itemTitle {
@@ -243,7 +287,7 @@
           display: block;
           height: 200px;
           width: 100%;
-          object-fit: fill;
+          object-fit: cover;
         }
 
         .content {
@@ -273,8 +317,7 @@
 }
 
 .faq {
-  margin-top: 60px;
-  padding-top: 60px;
+  @include sectionTPadding;
   @include sectionHPadding;
   display: flex;
   flex-flow: column;
@@ -285,22 +328,9 @@
     display: flex;
     flex-flow: column;
     align-items: center;
-
-    .title {
-      @include t1;
-      text-align: center;
-    }
-
-    .desc {
-      @include tm;
-      color: $brandBlack75;
-      margin-top: 16px;
-      max-width: $descMaxWidth;
-      text-align: center;
-    }
+    @include sectionHeader;
 
     .items {
-      margin-top: 32px;
     }
   }
 }
